--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -41,26 +41,38 @@
     </div>
   -->
     <div>
-        <div class="max-w-[95%] flex">
+        <div class="mx-auto mt-4 max-w-[95%] flex text-xl">
             <span class="mr-auto">
                 {{range .Umap}}
                 <a href="{{.Url}}">{{.Name}}/</a>
                 {{end}}
             </span>
             <span>
-                <button onclick="showHideZipOptions()">ZZ</button>
-                <div class="hidden" id="zip-options">
-                    <button id="zip-download">Download</button>
-                    <button onclick="selectAll()" id="selectAll-button">SelectAll</button>
-                    <button onclick="clearSelections()" id="clearSelections-button">Clear All</button>
+                <div id="opt-backdrop" class="hidden absolute w-[100vw] h-[100vh] bg-[#00000024] top-0 left-0"></div>
+                <div class="relative">
+                    <button onclick="showHideZipOptions()">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="w-6 h-6" viewBox="0 0 16 16">
+                            <path
+                                d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0" />
+                        </svg>
+                    </button>
+                    <div class="hidden absolute right-0 drop-shadow-2xl border-2 px-2 py-1 bg-white" id="zip-options">
+                        <button id="zip-download">Download</button>
+                        <button onclick="selectAll()" id="selectAll-button">SelectAll</button>
+                        <button onclick="clearSelections()" id="clearSelections-button">Clear All</button>
+                    </div>
                 </div>
             </span>
 
         </div>
 
+        <div id="zip-down-progress">
+        </div>
+
 
         <div>
-            <table>
+            <table class="mx-auto">
                 <!-- <tr>
 
                     <td>
@@ -85,18 +97,27 @@
                     IsDir        bool
                     }
                 -->
+                <!-- lith the dirs then list the files -->
                 {{range .Dir}}
                 {{if .IsDir}}
                 {{$path := pathJoin $.Od .Name}}
-                <tr>
-                    <td>
-                        {{ if not .IsDir}}[File]{{else}}[Dir]{{end}}
+                <tr class="h-8">
+                    <td class="pr-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="w-6 h-6 fill-yellow-500" viewBox="0 0 16 16">
+                            <path
+                                d="M9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.825a2 2 0 0 1-1.991-1.819l-.637-7a1.99 1.99 0 0 1 .342-1.31L.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3m-8.322.12C1.72 3.042 1.95 3 2.19 3h5.396l-.707-.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981z" />
+                        </svg>
                     </td>
-                    <td>
-                        <a href="{{$path}}">{{.Name}}</a>
-                        {{if not .IsDir}}{{.Size}}{{end}}
+                    <td class="flex flex-col w-[70vw] overflow-hidden">
+                        <a class="w-[50%] overflow-hidden overflow-ellipsis" href="{{$path}}">{{.Name}}</a>
+                        <span class="text-gray-500 text-sm">
+                            <span>
+                                {{.LastModified | timeFmt}}
+                            </span>
+                        </span>
                     </td>
-                    <td>
+                    <td class="pl-2">
                         <input type="checkbox" data-zip-select="{{$path}}" onclick="markUnmark(this)" />
                     </td>
                 </tr>
@@ -106,15 +127,27 @@
                 {{range .Dir}}
                 {{if not .IsDir}}
                 {{$path := pathJoin $.Od .Name}}
-                <tr>
-                    <td>
-                        {{ if not .IsDir}}[File]{{else}}[Dir]{{end}}
+                <tr class="h-8">
+                    <td class="pr-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="w-6 h-6"
+                            viewBox="0 0 16 16">
+                            <path
+                                d="M4 0h5.293A1 1 0 0 1 10 .293L13.707 4a1 1 0 0 1 .293.707V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2m5.5 1.5v2a1 1 0 0 0 1 1h2z" />
+                        </svg>
                     </td>
-                    <td>
-                        <a href="{{$path}}">{{.Name}}</a>
-                        {{if not .IsDir}}{{.Size}}{{end}}
+                    <td class="flex flex-col w-[70vw] overflow-hidden">
+                        <a class="truncate " href="{{$path}}">{{.Name}}</a>
+                        <span class="text-gray-500 text-sm">
+                            <span>
+                                {{.Size}}
+                            </span>
+                            <span>|</span>
+                            <span>
+                                {{.LastModified | timeFmt}}
+                            </span>
+                        </span>
                     </td>
-                    <td>
+                    <td class="pl-2">
                         <input type="checkbox" data-zip-select="{{$path}}" onclick="markUnmark(this)" />
                     </td>
                 </tr>
