front end stuff, bug fix zipp

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -167,10 +167,10 @@
     <script>
         // {{ template "zip.js"}}
         // {{ template "zip_ssr.js"}}
-        // {{ template "sum256.js"}}
-        // {{ template "up.js"}}
-        // {{ template "mkdir.js"}} 
     </script>
+    <!-- // {{ template "sum256.js"}}
+        // {{ template "up.js"}}
+        // {{ template "mkdir.js"}}  -->
 
 </body>
 
