--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -76,8 +76,9 @@
                             <span class="flex flex-col">
                                 <span class="w-[75vw] text-ellipsis overflow-hidden whitespace-nowrap">{{.Name}}</span>
                                 <span class="text-gray-500 text-sm">
+                                    {{if .IsDir}}
                                     <span>{{.LastModified | timeFmt}}</span>
-                                    {{if not .IsDir}}
+                                    {{else}}
                                     <span>{{.Size}}</span>
                                     <span>|</span>
                                     <span>{{.LastModified | timeFmt}}</span>
